fixed ul/ol text align not being in line with numbers/buttons

--- a/06B/styles.css
+++ b/06B/styles.css
@@ -75,11 +75,14 @@ a:hover {
 
 ol {
   font-size: 18px;
+  text-align: center;
+  list-style-position: inside;
 }
 
 ul {
   padding: 10px;
   margin-left: 10px;
+  list-style: inside;
 }
 
 h2 {
